--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,10 @@ spring.datasource.password=
 
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
+#Hibernate default config
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#Database schemma genaration
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
