--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Projeto API de Ordem de Serviço</description>
 	<properties>
 		<java.version>17</java.version>
+		<modelmapper.version>3.1.0</modelmapper.version>
 	</properties>
 	<dependencies>
 		
@@ -51,17 +52,23 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
+		 <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>7.15.0</version>
+        </dependency>
 		
 		<dependency>
 		  <groupId>org.flywaydb</groupId>
 		  <artifactId>flyway-mysql</artifactId>
 		</dependency>
 
-		
+		 <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper.version}</version>
+        </dependency>
+        
 	</dependencies>
 
 	<build>
