Flyway running and working. Create executor, pessoa, cidade, estado. EstadoController working with findAll.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #Database schemma genaration
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+ #spring.jpa.generate-ddl=true
+ #spring.jpa.hibernate.ddl-auto=create
+
+#Enable queries via flyway
+spring.jpa.open-in-view=false
