--- a/pom.xml
+++ b/pom.xml
@@ -52,17 +52,22 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		
-		 <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>7.15.0</version>
-        </dependency>
+		 
+	    <!-- Flyway  -->  
+	
 		
 		<dependency>
-		  <groupId>org.flywaydb</groupId>
-		  <artifactId>flyway-mysql</artifactId>
+	        <groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
 		</dependency>
-
+		
+	    <dependency>
+	      <groupId>org.flywaydb</groupId>
+	      <artifactId>flyway-mysql</artifactId>
+	    </dependency>
+	 	    	
+		 	
+		 	    	
 		 <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
