--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
             <artifactId>modelmapper</artifactId>
             <version>${modelmapper.version}</version>
         </dependency>
-        
+
+		 <dependency>
+		 	<groupId>org.springframework.boot</groupId>
+		 	<artifactId>spring-boot-devtools</artifactId>
+		 </dependency>
 	</dependencies>
 
 	<build>
