A lot of global handles.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #Enable queries via flyway
 spring.jpa.open-in-view=false
+
+#Fail on unknown and on ignored properties. Its necessary for handlers.
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
+
+#Throw exception if no hanler found. Used with handlers.
+spring.mvc.throw-exception-if-no-handler-found=true
+
+#Activates 
+spring.web.resources.add-mappings=false
+
