--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.8</version>
+		<version>2.7.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.mpituba</groupId>
@@ -66,7 +66,10 @@
 	      <artifactId>flyway-mysql</artifactId>
 	    </dependency>
 	 	    	
-		 	
+		 <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>	
 		 	    	
 		 <dependency>
             <groupId>org.modelmapper</groupId>
@@ -74,10 +77,7 @@
             <version>${modelmapper.version}</version>
         </dependency>
 
-		 <dependency>
-		 	<groupId>org.springframework.boot</groupId>
-		 	<artifactId>spring-boot-devtools</artifactId>
-		 </dependency>
+		 
 	</dependencies>
 
 	<build>
