Some handler corrections. Estado entity bean validations

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>modelmapper</artifactId>
             <version>${modelmapper.version}</version>
         </dependency>
+        
+        
+        <!-- Bean Validation -->
+        <dependency> 
+		    <groupId>org.springframework.boot</groupId> 
+		    <artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>
 
 		 
 	</dependencies>
