--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,6 @@
 		
 		 
 	    <!-- Flyway  -->  
-	
-		
 		<dependency>
 	        <groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
@@ -83,7 +81,14 @@
 		    <groupId>org.springframework.boot</groupId> 
 		    <artifactId>spring-boot-starter-validation</artifactId> 
 		</dependency>
-
+	
+		<!-- Test Assured-->
+		 <dependency>
+	    	<groupId>io.rest-assured</groupId>
+	    	<artifactId>rest-assured</artifactId>
+	    	<scope>test</scope>
+	    </dependency>
+	
 		 
 	</dependencies>
 
@@ -93,6 +98,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<!-- Test dependency for maven -->
+			<plugin>
+		      	<artifactId>maven-failsafe-plugin</artifactId>
+		    </plugin>
+			
 		</plugins>
 	</build>
 
