--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost/osdb?createDatabaseIfNotExist=true&
 spring.datasource.username=root
 spring.datasource.password=
 
+#Must be removed on production environment and will not run afterMigration callback.
+#This callback may destroy production data if used there.
+#The below property populates the main database with afterMigrate callback data.
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 #Hibernate default config
